--- a/package.json
+++ b/package.json
@@ -19,5 +19,20 @@
   "bugs": {
     "url": "https://github.com/xiaoyiyibaibai/vuelearn/issues"
   },
-  "homepage": "https://github.com/xiaoyiyibaibai/vuelearn#readme"
+  "homepage": "https://github.com/xiaoyiyibaibai/vuelearn#readme",
+  "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.18.0",
+    "vue-loader": "^10.0.2",
+    "eslint": "^3.5.0",
+    "serve": "^1.4.0",
+    "webpack": "^1.13.2",
+    "weex-loader": "^0.3.3",
+    "weex-builder": "^0.2.6"
+  },
+  "dependencies": {
+    "weex-html5": "^0.3.2",
+    "weex-components": "*"
+  }
 }
