--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "sax": "^1.2.4",
+    "vue-router": "^3.0.1",
     "weex-components": "*",
     "weex-html5": "^0.3.2"
   }
